# TutorApp

./: .env  .env.dist  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile.prod  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  lint.yml  test.yml  tutorapp-ci.yml
TutorApp/: .env  manage.py  requirements.txt
TutorApp/TutorApp/: asgi.py  settings.py
TutorApp/core/: asgi.py  forms.py  settings.py  urls.py  wsgi.py
TutorApp/courses/: choices.py  filters.py  models.py  urls.py
TutorApp/courses/forms/: book_forms.py  section_forms.py  topic_forms.py  training_tasks_forms.py
TutorApp/courses/migrations/: 0001_initial.py  0002_initial.py  0003_remove_book_author_remove_section_book_book_authors_and_more.py  0004_alter_book_school_level_alter_book_subject.py  0005_book_book_type.py  0006_alter_section_options_remove_section_books_and_more.py  0007_remove_trainingtask_completed_by_trainingtask_book_and_more.py  0008_remove_trainingtask_explanation_video_and_more.py  0009_alter_trainingtask_level.py  0010_trainingtask_source.py  0011_alter_usertaskcompletion_completed_at.py  0012_alter_trainingtask_answer_and_more.py
TutorApp/courses/tests/: book_tests.py  factories.py  section_tests.py  topic_tests.py  training_tasks_tests.py
TutorApp/courses/views/: book_views.py  section_views.py  topic_views.py  training_task_views.py
TutorApp/examination_tasks/: apps.py  choices.py  factories.py  filters.py  forms.py  models.py  services.py  urls.py  views.py
TutorApp/examination_tasks/forms/: book_forms.py  exam.forms.py  exam_forms.py  exam_tasks_forms.py  section_forms.py  topic_forms.py  training_tasks_forms.py
TutorApp/examination_tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_exam_subject.py  0003_exam_subject_alter_examtask_task_screen.py  0003_mathmatriculationtasks_content.py  0004_alter_exam_options_alter_exam_unique_together_and_more.py  0004_alter_exam_year.py  0005_alter_exam_solutions_link_alter_exam_tasks_link.py  0006_book_section_and_more.py  0007_delete_mathmatriculationtasks_and_more.py  0008_alter_examtask_task_content.py
TutorApp/examination_tasks/services/: ExamTaskDBService.py  ExtractTaskContentFromLines.py  ExtractTaskPagesFromPdf.py  ExtractTaskTextFromPdf.py  __init__.py  extractTaskFromPdf.py  extractTaskPagesFromPdf.py  extract_task_from_pdf.py  tempFileService.py
TutorApp/examination_tasks/templatetags/: exam_filters.py
TutorApp/examination_tasks/tests/: factories.py  test_services.py  test_views.py
TutorApp/examination_tasks/views/: book_views.py  exam_task_views.py  exam_views.py  section_views.py  student_views.py  teacher_views.py  topic_views.py  training_task_views.py
TutorApp/motifs/: apps.py  factories.py  filters.py  models.py  urls.py
TutorApp/motifs/forms/: motif_forms.py
TutorApp/motifs/migrations/: 0001_initial.py  0002_alter_motif_options_alter_motif_level_type.py  0003_alter_motif_subject.py
TutorApp/motifs/tests/: factories.py  motif_views_tests.py  test_motif_views.py
TutorApp/motifs/views/: motif_views.py
TutorApp/plans/: models.py  services.py  urls.py
TutorApp/plans/fixtures/: plans.json
TutorApp/plans/migrations/: 0001_initial.py  0002_initial.py  0003_add_default_plans.py  0003_alter_plan_type.py  0004_plan_currency.py  (+2 more)
TutorApp/quizes/: factories.py  filters.py  forms.py  models.py  urls.py  views.py
TutorApp/templates/: base.html  index.html  index.html.html
TutorApp/training_calendar/: apps.py  models.py
TutorApp/training_tasks/: apps.py  models.py  urls.py
TutorApp/users/: factories.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
TutorApp/videos/: factories.py  filters.py  forms.py  models.py  services.py  urls.py  views.py
nginx/conf.d/: app.conf
scripts/: deploy.sh
(+127 files in other folders)
