[project]
name = "tutorapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django-debug-toolbar (>=6.0.0,<7.0.0)",
    "django-silk (>=5.4.3,<6.0.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-filter (>=25.2,<26.0)",
    "pymupdf (>=1.26.5,<2.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]
dev = [
    "coverage (>=7.10.7,<8.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "bandit (>=1.8.6,<2.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "ruff (>=0.13.3,<0.14.0)",
    "safety (>=3.6.2,<4.0.0)",
    "djlint (>=1.36.4,<2.0.0)",
    "django-stubs (>=5.2.7,<6.0.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)",
    "types-django-filter (>=25.2.0.20251010,<26.0.0.0)"
]

[tool.poetry]
package-mode = false

[tool.bandit]
exclude_dirs = ["tests"]

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']